modified:   misitio/caiste.html 	modified:   misitio/estilo.css 	modified:   misitio/misitio.html 	new file:   misitio/spongebob fail.mp3

--- a/misitio/estilo.css
+++ b/misitio/estilo.css
@@ -28,3 +28,9 @@ div.juegodia {
     justify-content: center;
     width: 300px;
 }
+
+
+/*Esto es de la página del caíste*/
+div.spongebob {
+    
+}
