--- a/misitio/estilo.css
+++ b/misitio/estilo.css
@@ -46,5 +46,8 @@ div.descargas {
 
 /*Estilo del segundo título*/
 div.segundo-titulo {
-    
+    display: flex;
+    justify-content: center;
+    margin: 8%;
+    background-color: rgb(235, 235, 235);
 }
