--- a/misitio/estilo.css
+++ b/misitio/estilo.css
@@ -48,6 +48,13 @@ div.descargas {
 div.segundo-titulo {
     display: flex;
     justify-content: center;
-    margin: 8%;
+    margin: 0% 8%;
     background-color: rgb(235, 235, 235);
+    font-family: sans-serif;
+}
+
+/*Estilo del texto del segundo título "¿Quiénes somos?"*/
+div.texto2 {
+    font-family: sans-serif;
+    margin: 0% 8%;
 }
