--- a/misitio/estilo.css
+++ b/misitio/estilo.css
@@ -58,3 +58,41 @@ div.texto2 {
     font-family: sans-serif;
     margin: 0% 8%;
 }
+
+/*Estilo del div tabla*/
+div.tabla {
+    display: flex;
+    justify-content: center;
+}
+
+/*Estilos de las celdas*/
+table, tr, th {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 20px;
+}
+
+table tr, td {
+    border: 1px solid black;
+    padding: 10px;
+}
+
+/*Esto hace una linea negra horizontal*/
+div.linea {
+    background-color: black;
+    margin: 5% 0%;
+    height: min-content;
+}
+
+/*Esto es el logo de la página*/
+div.imagen {
+    display: flex;
+    justify-content: center;
+    margin: 5% 0%;
+}
+
+/*para poner el gif de minos en el centro*/
+div.minosprime {
+    display: flex;
+    justify-content: center;
+}
